Fix trang thai trung gian file 5000 + check trung

--- a/DataProcessing/DataProcessing/View/thietlapHeSo.xaml
+++ b/DataProcessing/DataProcessing/View/thietlapHeSo.xaml
@@ -352,7 +352,7 @@
                 Height="45"
                 Width="355"
                 BorderThickness="0">
-                <TextBlock
+                <TextBlock x:Name="searchbutton"
                     Background="Transparent"
                     Foreground="White"
                     FontSize="30"
