--- a/DataProcessing/DataProcessing/View/thietlapHeSo.xaml
+++ b/DataProcessing/DataProcessing/View/thietlapHeSo.xaml
@@ -244,7 +244,7 @@
                             HorizontalAlignment="Left"
                             Width="70"
                             PreviewTextInput="inputvalue_PreviewTextInput"
-                            Height="30"/>
+                            Height="30" TextChanged="inputvalue_TextChanged"/>
                     </StackPanel>
                     <StackPanel  
                             Margin="0 10 0 0"
